# agentree

./: .gitignore  AGENTS.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
.zed/: settings.json
patches/: @xterm+xterm+5.5.0.patch
src/: AGENTS.md  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: Sparkle.dylib
src-tauri/src/: AGENTS.md  lib.rs
src-tauri/src/commands/: app_state.rs  branch.rs  config.rs  label.rs  mod.rs  notification.rs  project.rs  worktree.rs
src-tauri/src/ghostty/: bridge.rs  config.rs  ffi.rs  mod.rs
src-tauri/src/models/: config.rs  project.rs
src-tauri/src/services/: config.rs  git.rs  mod.rs  notification.rs
src/components/dialogs/: Dialogs.tsx
src/components/layout/: AppShell.tsx  BranchSwitcher.tsx
src/components/sidebar/: AddProjectPopover.tsx  NewWorktreePopover.tsx  NotificationBell.tsx  ProjectSection.tsx  Sidebar.tsx  WorktreeCard.tsx  usePopover.ts
src/components/terminal/: TerminalView.tsx
src/components/ui/: accordion.tsx  badge.tsx  button.tsx  dialog.tsx  scroll-area.tsx  select.tsx
src/hooks/: useGhosttyTheme.ts  usePty.ts  useXterm.ts
src/lib/: invoke.ts
src/stores/: projectStoreActions.ts  projectStoreTerminal.ts  projectStoreTypes.ts  useNotificationStore.ts  useProjectStore.ts  useUIStore.ts
src/types/: config.ts  notification.ts  project.ts
