[package]
name = "agentree"
version = "0.1.0"
description = "Agentree - Lightweight Agent Terminal"
authors = ["Agentree"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
ghostty-link = []

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"ghostty-link\"))"] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-pty = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
dirs = "6"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
